--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -295,6 +295,7 @@
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <font key="NSFont" size="42" name="Avenir-Heavy"/>
+                                            <font key="NSOriginalFont" size="42" name="Avenir-Heavy"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -309,6 +310,9 @@
                                 </constraints>
                                 <color key="tintColor" red="0.3992299171" green="1" blue="0.59635763360000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="PlusButton"/>
+                                <connections>
+                                    <segue destination="bOD-nt-Ovi" kind="custom" identifier="addEventSegue" customClass="NewEventSegue" customModule="eventBox" customModuleProvider="target" id="ejr-pn-Faw"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWQ-4s-ZdS">
                                 <rect key="frame" x="20" y="317" width="560" height="21"/>
@@ -413,6 +417,105 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dxg-zM-2vu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1221" y="1909.25"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="IUZ-FR-HWH">
+            <objects>
+                <viewController id="bOD-nt-Ovi" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="e4K-kB-2r6"/>
+                        <viewControllerLayoutGuide type="bottom" id="uMK-gj-7po"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NVl-KB-bDK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jDQ-tJ-NHU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1922" y="1909"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Way-MD-Tww">
+            <objects>
+                <viewController id="DNh-91-MmY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="itM-hx-Tid"/>
+                        <viewControllerLayoutGuide type="bottom" id="83S-Qn-zxb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WhF-Il-gUI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21D-5h-87g">
+                                <rect key="frame" x="20" y="248" width="560" height="103"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="103" id="PqM-3Q-ZCD"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Event">
+                                        <attributes>
+                                            <color key="NSColor" red="0.39922991708009692" green="1" blue="0.59635763360438587" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="42" name="Avenir-Heavy"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                    <fragment content="Box">
+                                        <attributes>
+                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="42" name="Avenir-Heavy"/>
+                                            <font key="NSOriginalFont" size="42" name="Avenir-Heavy"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="ae8-2z-ti9">
+                                <rect key="frame" x="256" y="485" width="89" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="227-x5-KFL"/>
+                                    <constraint firstAttribute="width" constant="89" id="AWP-JU-kZB"/>
+                                </constraints>
+                            </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7Y-SY-3MG">
+                                <rect key="frame" x="20" y="516" width="560" height="64"/>
+                                <color key="backgroundColor" red="0.16470588235294117" green="0.31372549019607843" blue="0.5725490196078431" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="Yoc-rc-0rq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="21"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Login with Facebook"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.19215686269999999" green="0.19215686269999999" blue="0.19215686269999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="21D-5h-87g" firstAttribute="centerY" secondItem="WhF-Il-gUI" secondAttribute="centerY" id="2Ub-Gb-JSq"/>
+                            <constraint firstItem="21D-5h-87g" firstAttribute="trailing" secondItem="WhF-Il-gUI" secondAttribute="trailingMargin" id="6aC-f0-Zk5"/>
+                            <constraint firstItem="u7Y-SY-3MG" firstAttribute="trailing" secondItem="WhF-Il-gUI" secondAttribute="trailingMargin" id="Gs7-eW-mr2"/>
+                            <constraint firstItem="83S-Qn-zxb" firstAttribute="top" secondItem="u7Y-SY-3MG" secondAttribute="bottom" constant="20" id="R4H-IV-GDE"/>
+                            <constraint firstItem="u7Y-SY-3MG" firstAttribute="top" secondItem="ae8-2z-ti9" secondAttribute="bottom" constant="16" id="YYt-rc-Z0w"/>
+                            <constraint firstItem="21D-5h-87g" firstAttribute="leading" secondItem="WhF-Il-gUI" secondAttribute="leadingMargin" id="bFF-HD-h66"/>
+                            <constraint firstItem="ae8-2z-ti9" firstAttribute="centerX" secondItem="WhF-Il-gUI" secondAttribute="centerX" id="eX5-X5-uKH"/>
+                            <constraint firstItem="u7Y-SY-3MG" firstAttribute="leading" secondItem="WhF-Il-gUI" secondAttribute="leadingMargin" id="uKI-pd-b9U"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="myi-Jq-Rfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1221" y="2580"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="D7z-Ax-C5D">
