--- a/eventBox/Base.lproj/Main.storyboard
+++ b/eventBox/Base.lproj/Main.storyboard
@@ -418,10 +418,10 @@
             </objects>
             <point key="canvasLocation" x="1221" y="1909.25"/>
         </scene>
-        <!--View Controller-->
+        <!--Create Event View Controller-->
         <scene sceneID="IUZ-FR-HWH">
             <objects>
-                <viewController id="bOD-nt-Ovi" sceneMemberID="viewController">
+                <viewController id="bOD-nt-Ovi" customClass="CreateEventViewController" customModule="eventBox" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="e4K-kB-2r6"/>
                         <viewControllerLayoutGuide type="bottom" id="uMK-gj-7po"/>
@@ -466,7 +466,7 @@
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" image="noun_multiply_315673"/>
                                     </button>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Event Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3P3-n7-nqK">
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Event Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3P3-n7-nqK">
                                         <rect key="frame" x="16" y="73" width="566" height="64"/>
                                         <color key="backgroundColor" red="0.94283071354864756" green="0.97483544338007455" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -488,8 +488,11 @@
                                                 <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="bOD-nt-Ovi" id="voY-Qr-wq9"/>
+                                        </connections>
                                     </textField>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aei-fV-iO7">
+                                    <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aei-fV-iO7">
                                         <rect key="frame" x="16" y="145" width="566" height="64"/>
                                         <color key="backgroundColor" red="0.94283071350000003" green="0.97483544339999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -512,6 +515,9 @@
                                                 <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="bOD-nt-Ovi" id="FbY-BH-7Mn"/>
+                                        </connections>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun_calendar_138379" translatesAutoresizingMaskIntoConstraints="NO" id="90j-94-a9N">
                                         <rect key="frame" x="32" y="152" width="50" height="50"/>
@@ -520,7 +526,7 @@
                                             <constraint firstAttribute="width" constant="50" id="q47-Yn-L8b"/>
                                         </constraints>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dve-5z-3Sj">
+                                    <textField opaque="NO" clipsSubviews="YES" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Time" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dve-5z-3Sj">
                                         <rect key="frame" x="16" y="217" width="566" height="64"/>
                                         <color key="backgroundColor" red="0.94283071350000003" green="0.97483544339999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -543,6 +549,9 @@
                                                 <color key="value" red="0.35686274509999999" green="1" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <outlet property="delegate" destination="bOD-nt-Ovi" id="g5i-3f-J83"/>
+                                        </connections>
                                     </textField>
                                     <imageView userInteractionEnabled="NO" alpha="0.10000000149011612" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun_clock_200962" translatesAutoresizingMaskIntoConstraints="NO" id="bBl-pv-T36">
                                         <rect key="frame" x="32" y="224" width="50" height="50"/>
@@ -670,6 +679,9 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
@@ -680,6 +692,11 @@
                             <constraint firstAttribute="trailing" secondItem="oF6-E2-laC" secondAttribute="trailing" constant="1" id="Ls5-jq-0Y8"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="eventDateTextField" destination="Aei-fV-iO7" id="1Pe-Sn-upH"/>
+                        <outlet property="eventNameTextField" destination="3P3-n7-nqK" id="Qcc-qT-qhH"/>
+                        <outlet property="eventTimeTextField" destination="dve-5z-3Sj" id="BKf-A2-Wx0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jDQ-tJ-NHU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
